--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,7 @@
             "request": "launch",
             "runtimeExecutable": "${execPath}",
             "args": [
+                "${workspaceFolder}/test/test-workspace/test.code-workspace",
                 "--extensionDevelopmentPath=${workspaceFolder}",
                 "--extensionTestsPath=${workspaceFolder}/test/suite/index"
             ]
