avoid having to install on remotes

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "onCommand:extension.commentBox",
         "onCommand:commentBox.transformUsingStyle"
     ],
+    "extensionKind": [
+        "ui"
+    ],
     "main": "./src/extension",
     "contributes": {
         "commands": [
